# MemoryManagementTool

./: CMakeLists.txt
src/: main.cpp
src/common/: aliases.hpp  constants.hpp  errors.hpp  logger.hpp
src/dex/: base_parser.hpp  errors.hpp  kv_parser.hpp  maps_parser.hpp  smaps_parser.hpp  statm_parser.hpp
src/dex/models/: kv_registry.hpp  map_entry.hpp  smaps_entry.hpp  statm_entry.hpp
src/utils/: error.hpp  proc_utils.hpp  process_attachment.hpp  process_scanner.hpp  system_info.hpp
tests/: CMakeLists.txt  base_parser_test.cpp  kv_parser_test.cpp  maps_parser_test.cpp  process_error_test.cpp  smaps_parser_test.cpp  statm_parser_test.cpp
